<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">超级作业本1.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nicheng">昵称</string>
    <string name="xingming">姓名</string>
    <string name="banjiyanzhengma">班级验证码</string>
    <string name="queren">确认</string>
    <string name="takephoto">拍照上传</string>
    <string name="fromphotostore">从相册选择</string>
    <string name="reg_fanhui">返回</string>
    <string name="class_fabiao_tishi">提个问题或是分享一下你的心得吧。</string>
    <string name="class_fabiao">发表</string>
    <string name="class_button_all">全部</string>
    <string name="class_button_myself">我的</string>
    <string name="lookmore">查看更多</string>
    <string name="huifu">回复</string>
    <string name="guanzhu">关注</string>
    <string name="delete">删除</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新ing\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载ing\u2026</string>
    <string name="question_speak_exit">退出</string>
    <string name="question_speak_start">开始</string>
    <string name="question_speak_over">完成</string>
    <string name="question_speak_next">继续</string>
    <string name="question_speak_tishi">看到橙色的这些词了吗,你的发音还不够标准哦,在来试试吧！</string>
    <string name="newwork_text">new!</string>
    <string name="work_content_text">完成情况:</string>
    <string name="question_dictation_check">检查</string>
    <string name="question_dictation_mes">预听</string>
    <string name="question_dictation_content">\t在开始本次作业前,请先点击上面的波音按钮,进行音频的预听,以便更好的完成本次作业!</string>
    <string name="question_history_tishi">你需要多读的词：</string>
    <string name="edit_null">输入框不能为空！</string>
    <string name="Net_null">未连接网络</string>
    <string name="setting_tishi">点击头像进行修改！</string>
    <string name="saveUpdata">保存更新</string>
    <string name="changeClass">切换班级</string>
    <string name="exit_user">退出用户</string>
    <string name="main_class_oneTv1">磊磊</string>
    <string name="main_class_oneTv2">张小磊</string>
    <string name="main_class_classesTv">七年级二班英语</string>
    <string name="SwitchClass_Tv">切换班级</string>
    <string name="SwitchClass_Et">输入班级验证码加入新班级</string>
    <string name="senderError">发表失败</string>
    <string name="question_speak_tishi_ok">你的发音真的很不错哦,让我们再来读读其它的句子吧！</string>
    <string name="reg_info">登记信息</string>
    <string name="sender">发送</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="homeworking_title">今日作业</string>
    <string name="top">排行</string>
    <string name="work_null">还没有需要完成的作业！</string>
    <string name="reson1">拼写错误</string>
    <string name="reson2">朗读错误</string>
    <string name="reson3">连线错误</string>
    <string name="reson4">选择错误</string>
    <string name="reson5">完型错误</string>
    <string name="reson6">排序错误</string>
    <string name="returntext">原题:</string>
    <string name="work_end_str1">恭喜完成挑战！</string>
    <string name="work_end_str2">正确率：</string>
    <string name="work_end_str3">用时：</string>
    <string name="work_end_str4">好可惜没有全对哦,不能拿到&lt;精准>得分哦!</string>
    <string name="work_end_str5">恭喜你全部都答对了,&lt;精准>成就加10分!</string>
    <string name="work_end_str6">好可惜你的用时超过了最佳时间,不能拿到&lt;迅速>得分哦!</string>
    <string name="work_end_str12">好可惜你的正确率小于60%,不能拿到&lt;迅速>得分哦!</string>
    <string name="work_end_str7">恭喜你在最佳时间内完成作业,&lt;迅速>成就加10分!</string>
    <string name="work_end_str8">好可惜你你没能在截至时间前两小时完成作业,不能拿到&lt;捷足>得分哦!</string>
    <string name="work_end_str13">好可惜你的正确率小于60%,不能拿到&lt;捷足>得分哦!</string>
    <string name="work_end_str9">恭喜你在截至时间前两小时完成作业,&lt;捷足>成就加10分!</string>
    <string name="work_end_str10">确认完成</string>
    <string name="work_end_str11">再次挑战</string>
    <string name="prop_number_error">道具数量不足,无法使用道具</string>
    <string name="nulls"></string>
    <string name="set3">阳光翰文（北京）国际教育科技中心 发行</string>
    <string name="set4">苏州协创软件技术有限公司 提供技术支持</string>
    <string name="inputbanjiyanzhengma">输入班级验证码</string>
    <string name="inputkey">输入激活码</string>
    <string name="nextstep">跳过</string>
    <string name="classcode1">你还没有加入任何班级，进入后将不能使用任何</string>
    <string name="classcode2">功能，首先请加入一个班级方能正常使用全部功能。</string>
    <string name="guide_page_text">点击此按钮，可以展开导航栏</string>
    <string name="null_message">当前暂无任何问答...</string>
    <string name="null_message2">当前暂无任何通知...</string>

</resources>